--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'idea'
+apply plugin: 'application'
+
+mainClassName = 'TicTacToeRunner'
 
 sourceCompatibility = 1.8
 
@@ -12,4 +15,13 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+jar {
+    baseName = 'gs-gradle'
+    version =  '0.1.0'
+}
+
+run {
+    standardInput = System.in
 }
