--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,18 @@ apply plugin: 'application'
 
 mainClassName = 'TicTacToeRunner'
 
-sourceCompatibility = 1.8
-
 repositories {
     mavenCentral()
 }
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'TicTacToeRunner'
+    }
+}
+
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
@@ -19,8 +26,4 @@ dependencies {
 
 run {
     standardInput = System.in
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.0'
 }
