--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'application'
 
-mainClassName = 'TicTacToeRunner'
+mainClassName = 'com.matthewglover.tictactoe.consoleui.TicTacToeRunner'
 
 repositories {
     mavenCentral()
@@ -13,7 +13,7 @@ repositories {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'TicTacToeRunner'
+        attributes 'Main-Class': 'com.mathewglover.tictactoe.consoleui.TicTacToeRunner'
     }
 }
 
