--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,19 @@ targetCompatibility = 1.8
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile 'org.testfx:testfx-junit:4.0+'
+    testCompile 'org.testfx:testfx-junit:4.0+'
+    testRuntime 'org.testfx:openjfx-monocle:1.8.0_20'
+}
+
+/*
+ * Allows you to run the UI tests in headless mode by calling gradle with the -Pheadless=true argument
+ */
+if (project.hasProperty('headless') ? project.headless : false) {
+    println "Running UI Tests Headless"
+    test {
+        jvmArgs = ['-Djava.awt.headless=true', '-Dtestfx.robot=glass', '-Dtestfx.headless=true', '-Dprism.order=sw', '-Dprism.text=t2k']
+    }
 }
 
 run {
