--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,15 @@ dependencies {
     testRuntime 'org.testfx:openjfx-monocle:1.8.0_20'
 }
 
+sourceSets {
+    main {
+        resources {
+            srcDirs = ["src/main/java"]
+            includes = ["**/*.css"]
+        }
+    }
+}
+
 /*
  * Allows you to run the UI tests in headless mode by calling gradle with the -Pheadless=true argument
  */
@@ -33,21 +42,6 @@ if (project.hasProperty('headless') ? project.headless : false) {
     println "Running UI Tests Headless"
     test {
         jvmArgs = ['-Djava.awt.headless=true', '-Dtestfx.robot=glass', '-Dtestfx.headless=true', '-Dprism.order=sw', '-Dprism.text=t2k']
-        testLogging {
-            // set options for log level LIFECYCLE
-            events "failed"
-            exceptionFormat "short"
-
-            // set options for log level DEBUG
-            debug {
-                events "started", "skipped", "failed"
-                exceptionFormat "full"
-            }
-
-            // remove standard output/error logging from --info builds
-            // by assigning only 'failed' and 'skipped' events
-            info.events = ["failed", "skipped"]
-        }
     }
 }
 
